[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/textures/GUI/radio.png" type="Texture" id=1]
[ext_resource path="res://res/fonts/VCR OSD Mono.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://res/HGE/BLACK.png" type="Texture" id=3]
[ext_resource path="res://scenes/prefabs/Jukebox/JukeboxUI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "AudioFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AudioFadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[node name="Jukebox" type="CanvasLayer"]
layer = 10
script = ExtResource( 4 )

[node name="RadioBack" type="TextureRect" parent="."]
margin_right = 404.0
margin_bottom = 173.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioFront" type="TextureRect" parent="."]
margin_right = 404.0
margin_bottom = 173.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 31.0
margin_top = 46.0
margin_right = 243.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sad Again
by: Ian Macleod"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "BGM"

[node name="AudioFade" type="AnimationPlayer" parent="AudioStreamPlayer"]
root_node = NodePath("../..")
playback_speed = 0.5
anims/AudioFadeIn = SubResource( 2 )
anims/AudioFadeOut = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AudioStreamPlayer/AudioFade" to="." method="_on_AudioFade_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
